# co-ares-catalog

./: .env.example  .firebaserc  .gitignore  .prettierrc  .prettierrc.json  README.md  angular.json  firebase.json  next.config.js  package-lock.json  package.json  requirements.md  schema.sql
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  test.yml  update-firestore.yml  update-func.yml  update-web.yml  update.yml
data/: .gitignore  README.md  extractor.py  package-lock.json  package.json  pyproject.toml
data/js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
data/python/: .gitignore  Makefile  README.md  county_adj.json  county_adj.py  pyproject.toml
data/src/: excel.ts  firebase.ts  ics217.ts  main.ts
firestore/: .gitignore  firestore.rules  firestore.spec.js  package-lock.json  package.json
functions/: .eslintrc.js  .gitignore  eslint.config.js  package-lock.json  package.json  tsconfig.json
functions/src/: index.ts  newUser.ts
functions/test/: newUser.spec.ts
prisma/: schema.prisma  schema.sql
research/: ics309.html
src/: index.html  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  form217.service.spec.ts  form217.service.ts  ics217.service.spec.ts  ics217.service.ts  order-by.pipe.ts  organization-title.pipe.ts  organizations.service.ts
web/: ANGULAR_MIGRATION.md  angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
(+169 files in other folders)
