[tool.poetry]
name = "county_adj"
version = "0.1.0"
description = ""
authors = ["Chris Keller <xylo04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastkml = "^0.12"
lxml = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
